# HungerYet

./: .gitignore  LICENSE  README.md  docker-compose.yaml  swagger.yaml
client/: CMakeLists.txt  HungerYet.pro  adminmanagerdialog.cpp  adminmanagerdialog.h  adminmanagerdialog.ui  adminvarifydialog.cpp  adminvarifydialog.h  adminvarifydialog.ui  applicationdialog.cpp  applicationdialog.h  applicationdialog.ui  backgrounddialog.h  begindialog.cpp  begindialog.h  begindialog.ui  chatdialog.cpp  chatdialog.h  chatdialog.ui  clickedlabel.h  customizeedit.h  editinfodialog.cpp  editinfodialog.h  editinfodialog.ui  favoritedialog.cpp  favoritedialog.h  favoritedialog.ui  givemoneydialog.cpp  givemoneydialog.h  givemoneydialog.ui  global.cpp  global.h  homedialog.cpp  homedialog.h  homedialog.ui  httpmanager.cpp  httpmanager.h  kimiapi.cpp  kimiapi.h  logindialog.cpp  logindialog.h  (+43 more)
client/cmake/: CMakeLists.txt  logindialog.cpp  particleeffect.cpp  resources.qrc
client/cmake/include/: maindialog.h  mainwindow.h
client/cmake/resources/: config.ini
client/cmake/src/: backgrounddialog.cpp  clickedbtn.cpp  clickedlabel.cpp  global.cpp  httpmanager.cpp  logindialog.cpp  main.cpp  maindialog.cpp  mainwindow.cpp  particleeffect.cpp  registerdialog.cpp  resetdialog.cpp  tcpmanager.cpp  timerbtn.cpp  usermanager.cpp
client/cmake/style/: stylesheet.qss
client/cmake/ui/: maindialog.ui
client/qmake/: HungerYet.pro  applicationdialog.cpp  applicationdialog.h  applicationdialog.ui  homedialog.ui  kimiapi.cpp  logindialog.cpp  mainwindow.cpp  mainwindow.h  menudialog.h  menudialog.ui  resources.qrc
client/qmake/resources/: config.ini
client/qmake/style/: stylesheet.qss
client/resources/: config.ini
client/resources/Login/: x.py
client/style/: stylesheet.qss
server/RabbitMq/: CMakeLists.txt
server/RabbitMq/include/: rabbitmq_config.h  rabbitmq_manager.h
(+97 files in other folders)
